# Meetups

./: README.md
2017-03-22 [Gabriel Aubut-Lussier] Développement web avec C++/: LICENSE  Readme.md
2017-05-30 [Gabriel Aubut-Lussier] Write, Build and Execute/: Readme.md
2017-06-27 [Patrice Roy] Which machine am I coding to/: Readme.md
2017-07-25 [John Plaice] Static analysis of C++ projects with CodeSonar/: Readme.md
2017-08-17 [Gabriel Aubut-Lussier] Experimental programming workshop/: Readme.md  readme-cppx.md
2017-09-19 [Pierric Gimmig] Hooked on Profiling/: Readme.md
2017-10-17 Return on CppCon 2017/: Readme.md
2017-11-14 [Gabriel Aubut-Lussier] Algebraic data types/: Readme.md
2017-12-13 [Thomas D Peters] An introduction to C++ Concepts/: Readme.md
2017/2017-03-22 [Gabriel Aubut-Lussier] Développement web avec C++/: 20170322-WebDevelopment.key  Readme.md
2017/2017-05-30 [Gabriel Aubut-Lussier] Write, Build and Execute/: Readme.md
2017/2017-06-27 [Patrice Roy] Which machine am I coding to/: Readme.md
2017/2017-07-25 [John Plaice] Static analysis of C++ projects with CodeSonar/: Readme.md
2017/2017-08-17 [Gabriel Aubut-Lussier] Experimental programming workshop/: readme-cppx.md
2017/2017-09-19 [Pierric Gimmig] Hooked on Profiling/: Readme.md
2017/2017-10-17 Return on CppCon 2017/: Kévin Alexandre Boissonneault.pptx  Readme.md
2017/2017-11-14 [Gabriel Aubut-Lussier] Algebraic data types/: Readme.md
2017/2017-12-13 [Thomas D Peters] An introduction to C++ Concepts/: Readme.md  concepts-cpp-mtl.pptx
2018-02-27 Lightning Talks/: Readme.md
2018-03-21 [Thomas D Peters] Undefined behavior in C and C++/: Readme.md
2018-04-26 [Philippe Michael Groarke] How To SIMD/: Readme.md
2018-04-26 [Philippe Michael Groarke] How To SIMD/sample_code/: .gitignore  LICENSE  README.md
2018-05-23 [Gabriel Aubut-Lussier] Potpourri de fonctionnalités obscures/: Readme.md
2018-05-23 [Gabriel Aubut-Lussier] Potpourri de fonctionnalités obscures/: MonAffreuxFinbonacci.cpp  Readme.md
2018-06-21 [Jean-Michel Carter] To Catch(2) a Mocking Bug/: Readme.md
2018-06-21 [Jean-Michel Carter] To Catch(2) a Mocking Bug/ExampleCode/: README.md  testMock.cpp
2018-07-24 [Patrice Roy] Pessimistic Programming/: Readme.md
2018-07-24 [Patrice Roy] Pessimistic Programming/Examples/: consume-data-5.cpp  experimental-coroutines.cpp  long-computation.cpp  rle-compression.h  segm-transform.cpp  vector-vs-deque-2.cpp  vector-vs-deque.cpp
2018-10-16 Retour sur CppCon 2018/: Readme.md
2018-12-13 [Gabriel Aubut-Lussier] L'adaptation d'Antidote pour le Web (1:n)/: 20181213 AdaptationAntidoteWebPartie1.key  Readme.md
2018-12-13 [Gabriel Aubut-Lussier] L'adaptation d'Antidote pour le Web (1:n)/AntidotePourLeWeb/ExempleREST/: CMakeLists.txt
2018-12-13 [Gabriel Aubut-Lussier] L'adaptation d'Antidote pour le Web (1:n)/AntidotePourLeWeb/ExempleREST/include/: CustomerInfo.h  SingleHandlerServer.h
2018-12-13 [Gabriel Aubut-Lussier] L'adaptation d'Antidote pour le Web (1:n)/AntidotePourLeWeb/ExempleREST/src/: Address.cpp  CustomerInfo.cpp  main.cpp
2018-12-13 [Gabriel Aubut-Lussier] L'adaptation d'Antidote pour le Web (1:n)/AntidotePourLeWeb/ExempleThreadGuard/: CMakeLists.txt
2018-12-13 [Gabriel Aubut-Lussier] L'adaptation d'Antidote pour le Web (1:n)/AntidotePourLeWeb/ExempleThreadGuard/src/: main.cpp
2018-12-13 [Gabriel Aubut-Lussier] L'adaptation d'Antidote pour le Web (1:n)/AntidotePourLeWeb/HTTPUtils/: CMakeLists.txt
2018-12-13 [Gabriel Aubut-Lussier] L'adaptation d'Antidote pour le Web (1:n)/AntidotePourLeWeb/HTTPUtils/include/: ValideurJSON.cpp  ValideurJSON.hpp  ValideurQueryString.cpp
2018/2018-01-25 Advent of code 2017/: Readme.md
2018/2018-03-21 [Thomas D Peters] Undefined behavior in C and C++/: Readme.md  undefined behavior.pptx
2018/2018-04-26 [Philippe Michael Groarke] How To SIMD/: Readme.md
2018/2018-04-26 [Philippe Michael Groarke] How To SIMD/sample_code/: .clang-format  CMakeLists.txt
2018/2018-04-26 [Philippe Michael Groarke] How To SIMD/sample_code/src/: text.hpp
2018/2018-05-23 [Gabriel Aubut-Lussier] Potpourri de fonctionnalités obscures/: PotpourriFonctionsObscures.key  Readme.md
2018/2018-06-21 [Jean-Michel Carter] To Catch(2) a Mocking Bug/: Readme.md
2018/2018-07-24 [Patrice Roy] Pessimistic Programming/: Readme.md
2018/2018-08-22 [Thomas D Peters] Runtime Analysis with Valgrind and Google Sanitizers/: Runtime analysis with Valgrind and Google Sanitizers.pptx
2018/2018-10-16 Retour sur CppCon 2018/: Readme.md
2018/2018-12-13 [Gabriel Aubut-Lussier] L'adaptation d'Antidote pour le Web (1 de n)/: Readme.md
2019-01-22 [Frederic Hamel] A Case Study in Retro Emulation/: Readme.md
2019-02-21 [Thomas D Peters] Turing Completeness and Template Metaprogramming/: turing-completeness-and-template-metaprogramming.pptx
2019-04-16 [Gabriel Aubut-Lussier] Automatisation de tests asynchrones/: 20190416 Automatisation de tests asynchrones.key
2019-04-16 [Gabriel Aubut-Lussier] Automatisation de tests asynchrones/exemples/: CMakeLists.txt  Readme.md
2019-04-16 [Gabriel Aubut-Lussier] Automatisation de tests asynchrones/exemples/AsyncButton/: CMakeLists.txt
2019-04-16 [Gabriel Aubut-Lussier] Automatisation de tests asynchrones/exemples/AsyncButton/include/: AsyncButton.h
2019-04-16 [Gabriel Aubut-Lussier] Automatisation de tests asynchrones/exemples/AsyncButton/src/: AsyncTests1.cpp  AsyncTests2.cpp  EventAggregationTest.cpp  EventConsumptionN3785Test.cpp  EventConsumptionTest.cpp
2019-04-16 [Gabriel Aubut-Lussier] Automatisation de tests asynchrones/exemples/AsyncSystem/: CMakeLists.txt
2019-04-16 [Gabriel Aubut-Lussier] Automatisation de tests asynchrones/exemples/AsyncSystem/include/: AsyncSystem.hpp  AsyncSystemN3785.hpp  AsyncSystemTestRig.hpp  VariableCondition.hpp
2019-05-15 [Gabriel Aubut-Lussier, Richard Savoie] Dockerization for C++ Workshop/: Readme.md
2019-05-15 [Gabriel Aubut-Lussier, Richard Savoie] Dockerization for C++ Workshop/FROM scratch/: CMakeLists.txt
(+55 files in other folders)
